# repo-template

./: README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: manual-github-release.yml  workflowcall-code-testing.yml  workflowcall-github-release.yml
package_name/: __init__.py  hello_world.py
scripts/: run_all_tests.sh
tests/package_name/: test_hello_world.py
