[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "template"
version = "1.0.0"
description = "Brief description of the package and repo usage"
authors = ["Your Name <you@example.com>"]
classifiers = [
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "package_name" },
]

# Adjust the dependencies as needed

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.21.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
black = "^24.1.1"
pytest-asyncio = "^0.23.4"
pytest = "<8"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.4"


# Added tool arguements for project using black, isort, and pylint

[tool.black]
line-length = 250
fast = true

[tool.isort]
profile = "black"

[tool.pylint.main]
ignore-paths = ["tests"]
ignore-patterns = ["^test_.*\\.py$"]

[tool.pylint.'FORMAT']
ignore-long-lines="^\\s*(# )?.*['\"]?<?https?://\\S+>?"
indent-after-paren=4
max-line-length=250
# max-module-lines=1000
# single-line-class-stmt="no"
# single-line-if-stmt="no"


# Set basic pylint naming convention.
[tool.pylint.'BASIC']
argument-naming-style="snake_case"
attr-naming-style="snake_case"
class-attribute-naming-style="any"
class-naming-style="PascalCase"
const-naming-style="UPPER_CASE"
docstring-min-length=-1
function-naming-style="snake_case"
include-naming-hint="yes"

[tool.pylint.'TYPECHECK']
ignore-none="yes"


[tool.pylint.'MESSAGES CONTROL']
# Pylint can be overly noisy. If you want to disable some message types, you can do so here.
disable = [
    "too-few-public-methods",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
]
